<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

                <item
                        android:id="@+id/itm_navigation_1"
                        android:checkable="true"
                        android:icon="@drawable/ic_navigation_home"
                        android:title="@string/item_menu_1" />
                <item
                        android:id="@+id/itm_navigation_2"
                        android:checkable="true"
                        android:icon="@drawable/ic_navigation_search"
                        android:title="@string/item_menu_1" />
                <item
                        android:id="@+id/itm_navigation_3"
                        android:checkable="true"
                        android:icon="@drawable/ic_navigation_recharge"
                        android:title="@string/item_menu_1" />



        <item
                android:id="@+id/itm_navigation_general"
                android:title="TÍTULO 1"
                android:iconTint="@color/colorTitleNavigationDrawer"

        >
            <menu>
                <item
                        android:id="@+id/itm_navigation_4"
                        android:title="@string/item_menu_1"
                        android:icon="@drawable/ic_navigation_map"
                />
                <item
                        android:id="@+id/itm_navigation_5"
                        android:title="@string/item_menu_1"
                        android:icon="@drawable/ic_navigation_user"
                />
                <item
                        android:id="@+id/itm_navigation_6"
                        android:title="@string/item_menu_1"
                        android:icon="@drawable/ic_rank"
                />

            </menu>

        </item>
        <item
                android:id="@+id/itm_modules"
                android:title="TÍTULO 2">
            <menu>

                <item
                        android:id="@+id/itm_navigation_8"
                        android:title="Mantenimiento"
                        android:icon="@drawable/ic_navigation_fix"
                />
                <item
                        android:id="@+id/itm_navigation_9"
                        android:title="@string/item_menu_9"
                        android:icon="@drawable/ic_navigation_register"
                />
                <item
                        android:id="@+id/itm_navigation_10"
                        android:title="@string/item_menu_1"
                        android:icon="@drawable/ic_navigation_operation"
                />



            </menu>

        </item>

<item

        android:id="@+id/itm_conf"
        android:title="CONFIGURACIÓN">

    <menu>
                <item
                        android:id="@+id/itm_navigation_16"
                        android:title="@string/item_menu_configuration"
                        android:checkable="true"
                        android:icon="@drawable/ic_brightness_7_black_24dp"/>
                <item
                        android:id="@+id/itm_navigation_17"
                        android:title="@string/item_menu_help"
                        android:checkable="true"
                        android:icon="@drawable/ic_question"/>
                <item
                        android:id="@+id/itm_navigation_18"
                        android:title="@string/item_menu_firmware"
                        android:checkable="true"
                        android:icon="@drawable/ic_document"/>
                <item
                        android:id="@+id/itm_navigation_19"
                        android:title="@string/item_menu_logout"
                        android:checkable="true"
                        android:icon="@drawable/ic_logout"/>

    </menu>

</item>
    </group>
</menu>