<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ImageView
            android:id="@+id/toolbarFirmware"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorNavigationDrawer"/>

    <ImageView
            android:id="@+id/backArrow"
            app:layout_constraintTop_toTopOf="@id/toolbarFirmware"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/toolbarFirmware"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/toolbarFirmware"
            app:layout_constraintBottom_toBottomOf="@id/toolbarFirmware"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/text_size_h3"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_update_firmware"
            tools:text="Versión de firmware"
    />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tinUpdateFirmware"
            android:layout_width="@dimen/adjustable_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_short"
            android:layout_marginEnd="@dimen/margin_short"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/toolbarFirmware"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <EditText
                android:id="@+id/edtUpdateFirmware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/hint_last_version"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnUpdateFirmware"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintTop_toBottomOf="@id/tinUpdateFirmware"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/label_search_update"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"

    />

</android.support.constraint.ConstraintLayout>