<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:background="@color/colorWhite"
                                             xmlns:tools="http://schemas.android.com/tools">


    <ImageView
            android:id="@+id/imgRuteOfDay"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorNavigationDrawer"/>

    <TextView
            app:layout_constraintTop_toTopOf="@id/imgRuteOfDay"
            app:layout_constraintBottom_toBottomOf="@id/imgRuteOfDay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="@dimen/text_size_h3"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_subtitle_ruteday"
            android:textAlignment="center"
    />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/imgRuteOfDay"
        android:text="@string/label_priority"
/>
    <TextView

            android:id="@+id/tvPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_h4"

            app:layout_constraintLeft_toRightOf="@id/tvPriority"
            app:layout_constraintTop_toTopOf="@id/tvPriority"
            android:text="@string/label_commerce"
            app:layout_constraintRight_toLeftOf="@id/imgOrderItems"
    />

    <ImageView
            android:id="@+id/imgOrderItems"
            android:layout_width="wrap_content"
               android:layout_height="wrap_content"
            android:src="@drawable/ic_drag"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintTop_toTopOf="@id/tvPlace"
            app:layout_constraintRight_toRightOf="parent"
    />
    <View
            android:id="@+id/viewLine"
            android:layout_width="@dimen/adjustable_width"
            android:layout_height="@dimen/dimen_xxxshort"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_short"
            android:backgroundTint="@color/colorAccent"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPlace"
            app:layout_constraintRight_toRightOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPlaces"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_short"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/viewLine"
            app:layout_constraintBottom_toTopOf="@id/imgRuteTime"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

    </android.support.v7.widget.RecyclerView>



    <ImageView
            android:id="@+id/imgRuteTime"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="50dp"
            android:background="@color/colorNavigationDrawer"/>


    <TextView
            android:id="@+id/tvTime"
            app:layout_constraintBottom_toBottomOf="@id/imgRuteTime"
            app:layout_constraintLeft_toRightOf="@id/imgClk"
            app:layout_constraintRight_toRightOf="@id/imgRuteTime"
            app:layout_constraintTop_toTopOf="@id/imgRuteTime"
            android:textSize="@dimen/text_size_h4"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time"
            android:gravity="center"
            android:textAlignment="center"
    />
    <ImageView
            android:id="@+id/imgClk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvTime"
            app:layout_constraintBottom_toBottomOf="@id/tvTime"
            app:layout_constraintRight_toLeftOf="@id/tvTime"
            app:layout_constraintLeft_toLeftOf="@id/imgRuteTime"
            android:src="@drawable/ic_clock"
    />
</android.support.constraint.ConstraintLayout>